syntax = "proto3";

package mdsc.metastore.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "mdsc/metastore/v1/params.proto";
import "mdsc/metastore/v1/manifest.proto"; // ğŸ‘ˆ è¿½åŠ : FileInfoã®å®šç¾©ã‚’ã‚¤ãƒ³ãƒãƒ¼ãƒˆ

option go_package = "mdsc/x/metastore/types";
// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
// UpdateParams defines a (governance) operation for updating the module
  // parameters.
// The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // CreateManifest defines the CreateManifest RPC.
rpc CreateManifest(MsgCreateManifest) returns (MsgCreateManifestResponse);

  // UpdateManifest defines the UpdateManifest RPC.
  rpc UpdateManifest(MsgUpdateManifest) returns (MsgUpdateManifestResponse);

  // DeleteManifest defines the DeleteManifest RPC.
rpc DeleteManifest(MsgDeleteManifest) returns (MsgDeleteManifestResponse);
  
  // ä¿®æ­£: Manifestã«ãƒ•ã‚¡ã‚¤ãƒ«æƒ…å ±ã‚’è¿½åŠ ã™ã‚‹RPCã‚’å®šç¾©
  rpc AddFileToManifest(MsgAddFileToManifest) returns (MsgAddFileToManifestResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "mdsc/x/metastore/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
// NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgCreateManifest defines the MsgCreateManifest message.
message MsgCreateManifest {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string project_name = 2;
string version = 3;
}

// MsgCreateManifestResponse defines the MsgCreateManifestResponse message.
message MsgCreateManifestResponse {}

// ä¿®æ­£: Manifestã«ãƒ•ã‚¡ã‚¤ãƒ«æƒ…å ±ã‚’è¿½åŠ ã™ã‚‹ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸
message MsgAddFileToManifest {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string project_name = 2; // å¯¾è±¡ã® Manifest ã‚’ç‰¹å®š
  string file_path = 3; // ãƒ•ã‚¡ã‚¤ãƒ«ãƒ‘ã‚¹ã‚’ã‚­ãƒ¼ã¨ã—ã¦ä½¿ç”¨
  FileInfo file_info = 4 [(gogoproto.nullable) = false]; // ãƒ•ã‚¡ã‚¤ãƒ«æƒ…å ±
}

// MsgAddFileToManifestResponse defines the MsgAddFileToManifestResponse message.
message MsgAddFileToManifestResponse {}


// MsgUpdateManifest defines the MsgUpdateManifest message.
message MsgUpdateManifest {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string project_name = 2;
string version = 3;
}

// MsgUpdateManifestResponse defines the MsgUpdateManifestResponse message.
message MsgUpdateManifestResponse {}

// MsgDeleteManifest defines the MsgDeleteManifest message.
message MsgDeleteManifest {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string project_name = 2;
}

// MsgDeleteManifestResponse defines the MsgDeleteManifestResponse message.
message MsgDeleteManifestResponse {}