import { stringToPath } from '@cosmjs/crypto';
import { AccountData, DirectSecp256k1HdWallet, GeneratedType, Registry } from '@cosmjs/proto-signing';
import { DeliverTxResponse, GasPrice, SigningStargateClient, calculateFee } from '@cosmjs/stargate';
import * as k8s from '@kubernetes/client-node';
import { createReadStream } from 'fs';
import * as fs from 'fs/promises';
import fetch from 'node-fetch';
import * as path from 'path';
import { Reader, Writer } from 'protobufjs/minimal';

// --- è¨­å®šå€¤ ---
const BLOCK_SIZE_LIMIT_MB = 10;
let CHUNK_SIZE = 16 * 1024; // 16 KB

// --- å‹å®šç¾© ---
interface StoredChunk { index: string; data: string; }
interface StoredChunkResponse { stored_chunk: StoredChunk; }
interface StoredManifestResponse { stored_manifest: { url: string; manifest: string; }; }
interface Manifest { filepath: string; chunks: { index: string; chain: string; }[]; }
interface ChainInfo { name: string; type: 'datachain' | 'metachain'; }
interface ChainEndpoints { [key: string]: string; }

// --- ãƒ—ãƒ­ãƒˆã‚³ãƒ«ãƒãƒƒãƒ•ã‚¡ãƒ¬ã‚¸ã‚¹ãƒˆãƒªè¨­å®š ---
interface MsgCreateStoredChunk {
	creator: string;
	index: string;
	data: Uint8Array;
}
const MsgCreateStoredChunk = {
	create(base?: Partial<MsgCreateStoredChunk>): MsgCreateStoredChunk {
		return { creator: base?.creator ?? "", index: base?.index ?? "", data: base?.data ?? new Uint8Array(), };
	},
	encode(message: MsgCreateStoredChunk, writer: Writer = Writer.create()): Writer {
		if (message.creator !== '') { writer.uint32(10).string(message.creator); }
		if (message.index !== '') { writer.uint32(18).string(message.index); }
		if (message.data.length !== 0) { writer.uint32(26).bytes(message.data); }
		return writer;
	},
	decode(input: Reader | Uint8Array, length?: number): MsgCreateStoredChunk {
		const reader = input instanceof Reader ? input : new Reader(input);
		return { creator: '', index: '', data: new Uint8Array() };
	},
};

interface MsgCreateStoredManifest {
	creator: string;
	url: string;
	manifest: string;
}
const MsgCreateStoredManifest = {
	create(base?: Partial<MsgCreateStoredManifest>): MsgCreateStoredManifest {
		return { creator: base?.creator ?? "", url: base?.url ?? "", manifest: base?.manifest ?? "", };
	},
	encode(message: MsgCreateStoredManifest, writer: Writer = Writer.create()): Writer {
		if (message.creator !== "") { writer.uint32(10).string(message.creator); }
		if (message.url !== "") { writer.uint32(18).string(message.url); }
		if (message.manifest !== "") { writer.uint32(26).string(message.manifest); }
		return writer;
	},
	decode(input: Reader | Uint8Array, length?: number): MsgCreateStoredManifest {
		const reader = input instanceof Reader ? input : new Reader(input);
		return { creator: "", url: "", manifest: "" };
	}
};

const customRegistry = new Registry([
	['/datachain.datastore.v1.MsgCreateStoredChunk', MsgCreateStoredChunk as GeneratedType],
	['/metachain.metastore.v1.MsgCreateStoredManifest', MsgCreateStoredManifest as GeneratedType],
]);

// --- Kubernetes APIã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆè¨­å®š ---
const kc = new k8s.KubeConfig();
kc.loadFromDefault();
const k8sApi = kc.makeApiClient(k8s.CoreV1Api);
const K8S_NAMESPACE = 'raidchain';
const SECRET_NAME = 'raidchain-mnemonics';

/**
 * Kubernetesã‹ã‚‰ãƒã‚§ãƒ¼ãƒ³æƒ…å ±ã‚’å–å¾—ã™ã‚‹
 */
async function getChainInfo(): Promise<ChainInfo[]> {
	console.log('INFO: Kubernetesã‹ã‚‰ãƒã‚§ãƒ¼ãƒ³æƒ…å ± (Pod) ã‚’å–å¾—ã—ã¦ã„ã¾ã™...');
	const res = await k8sApi.listNamespacedPod({
		namespace: K8S_NAMESPACE,
		labelSelector: 'app.kubernetes.io/component in (datachain, metachain)'
	});
	console.log('âœ… ãƒã‚§ãƒ¼ãƒ³æƒ…å ±ã®å–å¾—ãŒå®Œäº†ã—ã¾ã—ãŸã€‚');
	return res.items.map(pod => ({
		name: pod.metadata!.labels!['app.kubernetes.io/instance']!,
		type: pod.metadata!.labels!['app.kubernetes.io/component']! as any,
	}));
}

/**
 * Kubernetesã‹ã‚‰RPCã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆã‚’å–å¾—ã™ã‚‹
 */
async function getRpcEndpoints(chains: ChainInfo[]): Promise<ChainEndpoints> {
	console.log('INFO: Kubernetesã‹ã‚‰RPCã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆ (Service) ã‚’å–å¾—ã—ã¦ã„ã¾ã™...');
	const endpoints: ChainEndpoints = {};
	const isLocal = process.env.NODE_ENV !== 'production';

	if (isLocal) {
		const res = await k8sApi.listNamespacedService({
			namespace: K8S_NAMESPACE,
			labelSelector: "app.kubernetes.io/category=chain"
		});
		for (const chain of chains) {
			const serviceName = `raidchain-${chain.name}-headless`;
			const service = res.items.find(s => s.metadata?.name === serviceName);
			const portInfo = service?.spec?.ports?.find(p => p.name === 'rpc');
			if (portInfo?.nodePort) {
				endpoints[chain.name] = `http://localhost:${portInfo.nodePort}`;
			}
		}
	} else {
		for (const chain of chains) {
			const serviceName = `raidchain-chain-headless`;
			endpoints[chain.name] = `http://raidchain-${chain.name}-0.${serviceName}.${K8S_NAMESPACE}.svc.cluster.local:26657`;
		}
	}
	console.log('âœ… RPCã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆã®å–å¾—ãŒå®Œäº†ã—ã¾ã—ãŸã€‚');
	return endpoints;
}

/**
 * Kubernetes Secretã‹ã‚‰ãƒ‹ãƒ¼ãƒ¢ãƒ‹ãƒƒã‚¯ã‚’å–å¾—ã™ã‚‹
 */
async function getCreatorMnemonic(chainName: string): Promise<string> {
	console.log(`INFO: Kubernetes Secretã‹ã‚‰'${chainName}'ã®ãƒ‹ãƒ¼ãƒ¢ãƒ‹ãƒƒã‚¯ã‚’å–å¾—ã—ã¦ã„ã¾ã™...`);
	const res = await k8sApi.readNamespacedSecret({ name: SECRET_NAME, namespace: K8S_NAMESPACE });
	const encodedMnemonic = res.data?.[`${chainName}.mnemonic`];
	if (!encodedMnemonic) throw new Error(`Secret does not contain mnemonic for ${chainName}.`);
	console.log(`âœ… '${chainName}'ã®ãƒ‹ãƒ¼ãƒ¢ãƒ‹ãƒƒã‚¯å–å¾—ãŒå®Œäº†ã—ã¾ã—ãŸã€‚`);
	return Buffer.from(encodedMnemonic, 'base64').toString('utf-8');
}

/**
 * æœ€ã‚‚ç©ºã„ã¦ã„ã‚‹ãƒ‡ãƒ¼ã‚¿ãƒã‚§ãƒ¼ãƒ³ã‚’è¿”ã™
 */
async function getQuietestChain(dataChains: ChainInfo[], rpcEndpoints: ChainEndpoints): Promise<string> {
	const statuses = await Promise.all(dataChains.map(async (c) => {
		try {
			const response = await fetch(`${rpcEndpoints[c.name]}/num_unconfirmed_txs`);
			const data = await response.json() as any;
			const pendingTxs = parseInt(data.result?.n_txs ?? '0', 10);
			return { chainId: c.name, pendingTxs };
		} catch (error) {
			return { chainId: c.name, pendingTxs: Infinity };
		}
	}));
	const minTxs = Math.min(...statuses.map(s => s.pendingTxs));
	const quietestChains = statuses.filter(s => s.pendingTxs === minTxs);

	const selected = quietestChains[Math.floor(Math.random() * quietestChains.length)];
	if (!selected) {
		throw new Error("No data chains available to select from.");
	}
	return selected.chainId;
}

/**
 * ãƒãƒ£ãƒ³ã‚¯ã‚’ãƒ‡ãƒ¼ã‚¿ãƒã‚§ãƒ¼ãƒ³ã«ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ã™ã‚‹
 */
async function uploadChunk(
	client: SigningStargateClient,
	account: AccountData,
	chunkIndex: string,
	chunkData: Buffer,
): Promise<DeliverTxResponse> {
	const msg = {
		typeUrl: '/datachain.datastore.v1.MsgCreateStoredChunk',
		value: { creator: account.address, index: chunkIndex, data: chunkData },
	};
	const gasEstimated = await client.simulate(account.address, [msg], 'Upload chunk');
	const fee = calculateFee(Math.round(gasEstimated * 1.5), GasPrice.fromString('0.00001uatom'));

	// ã“ã“ã§ãƒˆãƒ©ãƒ³ã‚¶ã‚¯ã‚·ãƒ§ãƒ³ãŒãƒ–ãƒ­ãƒ¼ãƒ‰ã‚­ãƒ£ã‚¹ãƒˆã•ã‚Œã‚‹
	return await client.signAndBroadcast(account.address, [msg], fee, 'Upload chunk');
}

/**
 * ãƒãƒ‹ãƒ•ã‚§ã‚¹ãƒˆã‚’ãƒ¡ã‚¿ãƒã‚§ãƒ¼ãƒ³ã«ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ã™ã‚‹
 */
async function uploadManifest(
	client: SigningStargateClient,
	account: AccountData,
	urlIndex: string,
	manifestString: string
): Promise<DeliverTxResponse> {
	const msg = {
		typeUrl: '/metachain.metastore.v1.MsgCreateStoredManifest',
		value: { creator: account.address, url: urlIndex, manifest: manifestString },
	};
	const gasEstimated = await client.simulate(account.address, [msg], 'Upload manifest');
	const fee = calculateFee(Math.round(gasEstimated * 1.5), GasPrice.fromString('0.00001uatom'));

	return await client.signAndBroadcast(account.address, [msg], fee, 'Upload manifest');
}

/**
 * ãƒãƒ‹ãƒ•ã‚§ã‚¹ãƒˆã‚’ãƒ¡ã‚¿ãƒã‚§ãƒ¼ãƒ³ã‹ã‚‰å–å¾—ã™ã‚‹
 */
async function queryStoredManifest(restEndpoint: string, urlIndex: string): Promise<StoredManifestResponse> {
	const queryUrl = `${restEndpoint}/metachain/metastore/v1/stored_manifest/${encodeURIComponent(urlIndex)}`;
	const response = await fetch(queryUrl);
	if (!response.ok) throw new Error(`Failed to query manifest: ${response.statusText}`);
	return await response.json() as StoredManifestResponse;
}

/**
 * ãƒãƒ£ãƒ³ã‚¯ã‚’ãƒ‡ãƒ¼ã‚¿ãƒã‚§ãƒ¼ãƒ³ã‹ã‚‰å–å¾—ã™ã‚‹
 */
async function queryStoredChunk(restEndpoint: string, chunkIndex: string): Promise<StoredChunkResponse> {
	const queryUrl = `${restEndpoint}/datachain/datastore/v1/stored_chunk/${encodeURIComponent(chunkIndex)}`;
	const response = await fetch(queryUrl);
	if (!response.ok) throw new Error(`Failed to query chunk: ${response.statusText}`);
	return await response.json() as StoredChunkResponse;
}

/**
 * Base64ã‚¨ãƒ³ã‚³ãƒ¼ãƒ‰å¾Œã®ã‚µã‚¤ã‚ºã‚’å…ƒã«å…ƒã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚µã‚¤ã‚ºã‚’è¨ˆç®—
 * @param targetSizeInBytes Base64ã‚¨ãƒ³ã‚³ãƒ¼ãƒ‰å¾Œã®ç›®æ¨™ã‚µã‚¤ã‚ºï¼ˆãƒã‚¤ãƒˆï¼‰
 */
function getOriginalSizeForBase64Target(targetSizeInBytes: number): number {
	return Math.floor(targetSizeInBytes * 3 / 4);
}

/**
 * ãƒ¡ã‚¤ãƒ³ã®ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰å‡¦ç†
 */
async function main() {
	console.log('--- Raidchain è‡ªå‹•è² è·åˆ†æ•£ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ã‚¹ã‚¯ãƒªãƒ—ãƒˆ ---');

	// ã‚³ãƒãƒ³ãƒ‰ãƒ©ã‚¤ãƒ³å¼•æ•°ã‚’ãƒ‘ãƒ¼ã‚¹
	const args = process.argv.slice(2);
	const sizeIndex = args.indexOf('--size-kb');
	const targetSizeKB = (sizeIndex !== -1 && args[sizeIndex + 1]) ? parseInt(args[sizeIndex + 1]!, 10) : 100;

	if (isNaN(targetSizeKB) || targetSizeKB <= 0) {
		console.error('ERROR: --size-kb ã«ã¯æ­£ã®æ•´æ•°ã‚’æŒ‡å®šã—ã¦ãã ã•ã„ã€‚');
		process.exit(1);
	}

	const siteUrl = `UploadTest-${Date.now()}`;
	const filePath = `src/tests/temp-file-${targetSizeKB}kb`;
	const originalSizeKB = Math.floor(getOriginalSizeForBase64Target(targetSizeKB * 1024) / 1024);
	const originalContent = `This is a test file for upload. Target encoded size: ${targetSizeKB} KB.`;

	await fs.writeFile(filePath, Buffer.alloc(originalSizeKB * 1024, originalContent));
	console.log(`âœ… ${originalSizeKB} KBã®ãƒ†ã‚¹ãƒˆãƒ•ã‚¡ã‚¤ãƒ«ã‚’ '${filePath}' ã«ä½œæˆã—ã¾ã—ãŸã€‚`);

	// 1. ç’°å¢ƒæƒ…å ±ã®å–å¾—
	const allChains = await getChainInfo();
	const dataChains = allChains.filter(c => c.type === 'datachain');
	const metaChain = allChains.find(c => c.type === 'metachain');
	if (!metaChain) {
		console.error('ERROR: ãƒ¡ã‚¿ãƒã‚§ãƒ¼ãƒ³ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“ã€‚');
		process.exit(1);
	}
	const rpcEndpoints = await getRpcEndpoints(allChains);

	

	// ãƒãƒ£ãƒ³ã‚¯ã‚µã‚¤ã‚ºã®å‹•çš„è¨ˆç®—
	const fileSizeInBytes = originalSizeKB * 1024;
	const numDataChains = dataChains.length > 0 ? dataChains.length : 1;
	let newChunkSize = Math.ceil(fileSizeInBytes / numDataChains);

	// ãƒ–ãƒ­ãƒƒã‚¯ã‚µã‚¤ã‚ºä¸Šé™ã®é©ç”¨
	const blockSizeLimitBytes = BLOCK_SIZE_LIMIT_MB * 1024 * 1024;
	if (newChunkSize > blockSizeLimitBytes) {
		newChunkSize = blockSizeLimitBytes;
		console.warn(`WARN: è¨ˆç®—ã•ã‚ŒãŸãƒãƒ£ãƒ³ã‚¯ã‚µã‚¤ã‚ºãŒãƒ–ãƒ­ãƒƒã‚¯ã‚µã‚¤ã‚ºä¸Šé™(${BLOCK_SIZE_LIMIT_MB} MB)ã‚’è¶…ãˆãŸãŸã‚ã€ä¸Šé™å€¤ã«è¨­å®šã—ã¾ã™ã€‚`);
	}
	CHUNK_SIZE = newChunkSize;
	console.log(`â„¹ï¸ å‹•çš„ã«è¨ˆç®—ã•ã‚ŒãŸãƒãƒ£ãƒ³ã‚¯ã‚µã‚¤ã‚º: ${Math.round(CHUNK_SIZE / 1024)} KB (ãƒ‡ãƒ¼ã‚¿ãƒã‚§ãƒ¼ãƒ³æ•°: ${numDataChains})`);

	// å„ãƒã‚§ãƒ¼ãƒ³ã®ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã¨ã‚¢ã‚«ã‚¦ãƒ³ãƒˆã‚’ä¸€åº¦ã ã‘ä½œæˆ
	const chainClients = new Map<string, { client: SigningStargateClient; account: AccountData }>();
	const apiEndpoints: ChainEndpoints = {};
	for (const chain of allChains) {
		const mnemonic = await getCreatorMnemonic(chain.name);
		const wallet = await DirectSecp256k1HdWallet.fromMnemonic(mnemonic, { hdPaths: [stringToPath("m/44'/118'/0'/0/2")] });
		const [account] = await wallet.getAccounts();
		if (!account) throw new Error(`Failed to get account from wallet for chain ${chain.name}`);
		const client = await SigningStargateClient.connectWithSigner(rpcEndpoints[chain.name]!, wallet, { registry: customRegistry, gasPrice: GasPrice.fromString('0.00001uatom') });
		chainClients.set(chain.name, { client, account });

		// APIã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆã‚‚å–å¾—
		const restEndpointRes = await k8sApi.listNamespacedService({ namespace: K8S_NAMESPACE, labelSelector: `app.kubernetes.io/instance=${chain.name}` });
		const service = restEndpointRes.items.find(s => s.metadata?.name?.includes('headless'));
		const portInfo = service?.spec?.ports?.find(p => p.name === 'api');
		if (portInfo?.nodePort) {
			apiEndpoints[chain.name] = `http://localhost:${portInfo.nodePort}`;
		}
	}
	// å„ãƒã‚§ãƒ¼ãƒ³ã®ãƒˆãƒ©ãƒ³ã‚¶ã‚¯ã‚·ãƒ§ãƒ³ã‚’ç›´åˆ—åŒ–ã™ã‚‹ãŸã‚ã®ãƒ­ãƒƒã‚¯
	const chainLocks = new Map<string, Promise<void>>();
	for (const chain of allChains) {
		chainLocks.set(chain.name, Promise.resolve());
	}

	// 2. ãƒ•ã‚¡ã‚¤ãƒ«ã®ã‚¹ãƒˆãƒªãƒ¼ãƒ ã¨ãƒãƒ£ãƒ³ã‚¯ã®ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰
	const chunksToUpload: { chunk: Buffer; index: string }[] = [];
	let chunkCounter = 0;
	const uniqueSuffix = `file-${Date.now()}`;

	const fileStream = createReadStream(filePath, { highWaterMark: CHUNK_SIZE });
	for await (const chunk of fileStream) {
		const chunkIndex = `${uniqueSuffix}-${chunkCounter}`;
		chunksToUpload.push({ chunk: chunk as Buffer, index: chunkIndex });
		chunkCounter++;
	}

	const uploadedChunks: { index: string; chain: string; }[] = [];

	const worker = async () => {
		while (chunksToUpload.length > 0) {
			const job = chunksToUpload.shift();
			if (!job) continue;

			const targetChainName = await getQuietestChain(dataChains, rpcEndpoints);

			// ãƒˆãƒ©ãƒ³ã‚¶ã‚¯ã‚·ãƒ§ãƒ³ãƒ­ãƒƒã‚¯ã®é©ç”¨
			const currentLock = chainLocks.get(targetChainName)!;
			let releaseNewLock!: () => void;
			const newLock = new Promise<void>(resolve => { releaseNewLock = resolve; });
			chainLocks.set(targetChainName, currentLock.then(() => newLock));
			await currentLock;

			try {
				const { client, account } = chainClients.get(targetChainName)!;
				console.log(`    -> ãƒãƒ£ãƒ³ã‚¯ #${job.index.split('-').pop()} (${(job.chunk.length / 1024).toFixed(2)} KB) ã‚’ '${targetChainName}' ã«ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ä¸­...`);
				await uploadChunk(client, account, job.index, job.chunk);
				console.log(`    ... ãƒãƒ£ãƒ³ã‚¯ #${job.index.split('-').pop()} ã®ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰å®Œäº†ã€‚`);
				uploadedChunks.push({ index: job.index, chain: targetChainName });
			} finally {
				releaseNewLock!();
			}
		}
	};

	const workerPromises = [];
	const maxConcurrentUploads = dataChains.length > 0 ? dataChains.length : 1;
	console.log(`ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ã‚’é–‹å§‹ã—ã¾ã™... (åŒæ™‚å®Ÿè¡Œæ•°: ${maxConcurrentUploads})`);
	for (let i = 0; i < maxConcurrentUploads; i++) {
		workerPromises.push(worker());
	}
	await Promise.all(workerPromises);

	// 3. ãƒãƒ‹ãƒ•ã‚§ã‚¹ãƒˆã®ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰
	const urlIndex = encodeURIComponent(siteUrl);
	uploadedChunks.sort((a, b) => parseInt(a.index.split('-').pop()!) - parseInt(b.index.split('-').pop()!));
	const manifest: Manifest = {
		filepath: path.basename(filePath),
		chunks: uploadedChunks,
	};
	const manifestString = JSON.stringify(manifest);

	console.log(`âœ… å…¨ã¦ã®ãƒãƒ£ãƒ³ã‚¯ã®ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ãŒå®Œäº†ã—ã¾ã—ãŸã€‚ãƒãƒ‹ãƒ•ã‚§ã‚¹ãƒˆã‚’ãƒ¡ã‚¿ãƒã‚§ãƒ¼ãƒ³ã«ç™»éŒ²ã—ã¾ã™ã€‚`);
	const { client: metaClient, account: metaAccount } = chainClients.get(metaChain.name)!;
	await uploadManifest(metaClient, metaAccount, urlIndex, manifestString);
	console.log(`ğŸ‰ '${siteUrl}' ã®ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ãŒæ­£å¸¸ã«å®Œäº†ã—ã¾ã—ãŸï¼`);

	// 4. æ¤œè¨¼å‡¦ç†
	console.log('\n--- æ¤œè¨¼å‡¦ç†ã‚’é–‹å§‹ã—ã¾ã™ ---');
	console.log('INFO: ãƒ¡ã‚¿ãƒã‚§ãƒ¼ãƒ³ã‹ã‚‰ãƒãƒ‹ãƒ•ã‚§ã‚¹ãƒˆã‚’å–å¾—ä¸­...');
	const manifestResponse = await queryStoredManifest(apiEndpoints[metaChain.name]!, urlIndex);
	const downloadedManifest = JSON.parse(manifestResponse.stored_manifest.manifest) as Manifest;
	console.log(`âœ… ãƒãƒ‹ãƒ•ã‚§ã‚¹ãƒˆã‚’å–å¾—ã—ã¾ã—ãŸã€‚${downloadedManifest.chunks.length}å€‹ã®ãƒãƒ£ãƒ³ã‚¯ã‚’ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰ã—ã¾ã™ã€‚`);

	const downloadedChunksBuffers: Buffer[] = [];
	await Promise.all(downloadedManifest.chunks.map(async (chunkInfo, i) => {
		const chunkResponse = await queryStoredChunk(apiEndpoints[chunkInfo.chain]!, chunkInfo.index);
		const chunkBuffer = Buffer.from(chunkResponse.stored_chunk.data, 'base64');
		downloadedChunksBuffers[i] = chunkBuffer;
	}));

	const reconstructedBuffer = Buffer.concat(downloadedChunksBuffers);
	const originalBuffer = await fs.readFile(filePath);

	if (Buffer.compare(originalBuffer, reconstructedBuffer) === 0) {
		console.log('ğŸ‰ æ¤œè¨¼æˆåŠŸï¼ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰ã•ã‚ŒãŸãƒ•ã‚¡ã‚¤ãƒ«ã¯å…ƒã®ãƒ•ã‚¡ã‚¤ãƒ«ã¨å®Œå…¨ã«ä¸€è‡´ã—ã¾ã™ã€‚');
	} else {
		console.error('âŒ æ¤œè¨¼å¤±æ•—ï¼ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰ã•ã‚ŒãŸãƒ•ã‚¡ã‚¤ãƒ«ãŒå…ƒã®ãƒ•ã‚¡ã‚¤ãƒ«ã¨ä¸€è‡´ã—ã¾ã›ã‚“ã€‚');
	}

	await fs.unlink(filePath);
	console.log(`ä¸€æ™‚ãƒ•ã‚¡ã‚¤ãƒ« '${filePath}' ã‚’å‰Šé™¤ã—ã¾ã—ãŸã€‚`);
}

// å®Ÿè¡Œ
main().catch(err => {
	console.error("äºˆæœŸã›ã¬ã‚¨ãƒ©ãƒ¼ã§ã‚¹ã‚¯ãƒªãƒ—ãƒˆãŒä¸­æ–­ã•ã‚Œã¾ã—ãŸã€‚");
	console.error(err);
	process.exit(1);
});