import { stringToPath } from '@cosmjs/crypto';
import { AccountData, DirectSecp256k1HdWallet, EncodeObject, GeneratedType, Registry } from '@cosmjs/proto-signing';
import { DeliverTxResponse, GasPrice, IndexedTx, SigningStargateClient, calculateFee } from '@cosmjs/stargate';
import { Tendermint37Client, WebsocketClient } from '@cosmjs/tendermint-rpc';
import * as k8s from '@kubernetes/client-node';
import cliProgress from 'cli-progress';
import { createReadStream } from 'fs';
import * as fs from 'fs/promises';
import * as path from 'path';
import { Reader, Writer } from 'protobufjs/minimal';
import winston from 'winston';
import Transport from 'winston-transport';
// ğŸ’¡ ä¿®æ­£ç‚¹: TxRaw ã‚’ã‚¤ãƒ³ãƒãƒ¼ãƒˆ
import { TxRaw } from 'cosmjs-types/cosmos/tx/v1beta1/tx';

// =================================================================================================
// ğŸ“š I. CONFIG & TYPE DEFINITIONS
// =================================================================================================

/**
 * ã™ã¹ã¦ã®è¨­å®šå€¤ã‚’ã“ã“ã«é›†ç´„
 */
const CONFIG = {
	K8S_NAMESPACE: 'raidchain',
	SECRET_NAME: 'raidchain-mnemonics',
	BLOCK_SIZE_LIMIT_MB: 1,
	DEFAULT_CHUNK_SIZE: 1 * 1024 * 1024,
	GAS_PRICE_STRING: '0.0000001uatom',
	GAS_MULTIPLIER: 1.5,
	HD_PATH: "m/44'/118'/0'/0/2",
	MAX_RETRIES: 3,
	RETRY_BACKOFF_MS: 500,
	// ğŸ’¡ å¤‰æ›´ç‚¹: ãƒ†ã‚¹ãƒˆé‡ã‚’å°‘ãªãã—ã€å˜ä¸€ãƒã‚§ãƒ¼ãƒ³ã«é›†ä¸­
	DEFAULT_TEST_SIZE_KB: 500, // 500KBã®ãƒ†ã‚¹ãƒˆãƒ•ã‚¡ã‚¤ãƒ«
	TARGET_CHAIN_NAME: 'data-0', // ğŸ’¡ è¿½åŠ : ã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒã‚§ãƒ¼ãƒ³ã‚’å›ºå®š
};

// å‹å®šç¾© (ç°¡ç•¥åŒ–ã®ãŸã‚ã«ä¸€éƒ¨ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã‚’çœç•¥/anyã‚’ä½¿ç”¨)
interface TransformableInfo extends winston.Logform.TransformableInfo { level: string; message: string;[key: string]: any; }
interface StoredChunk { index: string; data: string; }
interface StoredChunkResponse { stored_chunk: StoredChunk; }
interface StoredManifestResponse { stored_manifest: { url: string; manifest: string; }; }
interface Manifest { filepath: string; chunks: { index: string; chain: string; }[]; }
interface ChainInfo { name: string; type: 'datachain' | 'metachain'; }
interface ChainEndpoints { [key: string]: string; }
interface ExtendedChainClients { client: SigningStargateClient; account: AccountData; tmClient: Tendermint37Client; wsClient: WebsocketClient; restEndpoint: string; }
interface UploadJob { chunk: Buffer; index: string; retries: number; }
interface ChainProgress { total: number; completed: number; bar: cliProgress.SingleBar; }

// ãƒ—ãƒ­ãƒˆã‚³ãƒ«ãƒãƒƒãƒ•ã‚¡å‹å®šç¾©ã¨ãƒ¬ã‚¸ã‚¹ãƒˆãƒª (MsgCreateStoredChunk ã®ã¿ä½¿ç”¨)
interface MsgCreateStoredChunk { creator: string; index: string; data: Uint8Array; }
const MsgCreateStoredChunkProto = { // ğŸ’¡ ä¿®æ­£: åå‰ã®è¡çªã‚’é¿ã‘ã‚‹ãŸã‚ãƒªãƒãƒ¼ãƒ 
	create(base?: Partial<MsgCreateStoredChunk>): MsgCreateStoredChunk { return { creator: base?.creator ?? "", index: base?.index ?? "", data: base?.data ?? new Uint8Array(), }; },
	encode(message: MsgCreateStoredChunk, writer: Writer = Writer.create()): Writer {
		if (message.creator !== '') { writer.uint32(10).string(message.creator); }
		if (message.index !== '') { writer.uint32(18).string(message.index); }
		if (message.data.length !== 0) { writer.uint32(26).bytes(message.data); }
		return writer;
	},
	decode(input: Reader | Uint8Array, length?: number): MsgCreateStoredChunk { const reader = input instanceof Reader ? input : new Reader(input); return { creator: '', index: '', data: new Uint8Array() }; },
};
interface MsgCreateStoredManifest { creator: string; url: string; manifest: string; }
const MsgCreateStoredManifestProto = { // ğŸ’¡ ä¿®æ­£: åå‰ã®è¡çªã‚’é¿ã‘ã‚‹ãŸã‚ãƒªãƒãƒ¼ãƒ 
	create(base?: Partial<MsgCreateStoredManifest>): MsgCreateStoredManifest { return { creator: base?.creator ?? "", url: base?.url ?? "", manifest: base?.manifest ?? "", }; },
	encode(message: MsgCreateStoredManifest, writer: Writer = Writer.create()): Writer {
		if (message.creator !== "") { writer.uint32(10).string(message.creator); }
		if (message.url !== "") { writer.uint32(18).string(message.url); }
		if (message.manifest !== "") { writer.uint32(26).string(message.manifest); }
		return writer;
	},
	decode(input: Reader | Uint8Array, length?: number): MsgCreateStoredManifest { const reader = input instanceof Reader ? input : new Reader(input); return { creator: "", url: "", manifest: "" }; }
};
const customRegistry = new Registry([
	['/datachain.datastore.v1.MsgCreateStoredChunk', MsgCreateStoredChunkProto as GeneratedType], // ğŸ’¡ ä¿®æ­£: ãƒªãƒãƒ¼ãƒ å¾Œã®å®šæ•°ã‚’ä½¿ç”¨
	['/metachain.metastore.v1.MsgCreateStoredManifest', MsgCreateStoredManifestProto as GeneratedType], // ğŸ’¡ ä¿®æ­£: ãƒªãƒãƒ¼ãƒ å¾Œã®å®šæ•°ã‚’ä½¿ç”¨
]);

// =================================================================================================
// ğŸ“ II. LOGGER UTILITIES (CLASS-BASED)
// =================================================================================================

class LoggerUtil {
	private readonly logBuffer: TransformableInfo[] = [];
	private readonly logger: winston.Logger;
	private readonly logFilePath: string;

	constructor() {
		const scriptFileName = path.basename(process.argv[1]!).replace(path.extname(process.argv[1]!), '');
		this.logFilePath = path.join(process.cwd(), "src/tests/", `${scriptFileName}.log`);

		class LogBufferTransport extends Transport {
			private readonly buffer: TransformableInfo[];
			constructor(buffer: TransformableInfo[], opts?: Transport.TransportStreamOptions) {
				super(opts);
				this.buffer = buffer;
			}
			log(info: any, callback: () => void) {
				setImmediate(() => { this.emit('logged', info); });
				this.buffer.push(info);
				callback();
			}
		}

		this.logger = winston.createLogger({
			level: 'info',
			format: winston.format.combine(
				winston.format.timestamp({ format: 'YYYY-MM-DDTHH:mm:ss.SSSZ' }),
				winston.format.printf(info => `[${info.timestamp}] [${info.level.toUpperCase()}] - ${info.message} ${info.stack ? '\n' + info.stack : ''}`)
			),
			transports: [
				new LogBufferTransport(this.logBuffer),
				// ã‚³ãƒ³ã‚½ãƒ¼ãƒ«å‡ºåŠ›ã‚‚è¿½åŠ ã—ã¦ãƒªã‚¢ãƒ«ã‚¿ã‚¤ãƒ ã®é€²æ—ã‚’è¦‹ã‚„ã™ãã™ã‚‹
				new winston.transports.Console({
					format: winston.format.combine(
						winston.format.timestamp({ format: 'HH:mm:ss' }),
						winston.format.printf(info => `[${info.timestamp}] [${info.level.toUpperCase()}] - ${info.message}`)
					),
					level: 'info',
				})
			],
		});
	}

	public getLogger(): winston.Logger {
		return this.logger;
	}

	public async flushLogs() {
		if (this.logBuffer.length === 0) return;
		// Console Transportã®ãƒ­ã‚°ã‚’é™¤å¤–ã™ã‚‹ãŸã‚ã«ã€ãƒ¬ãƒ™ãƒ«ã§ãƒ•ã‚£ãƒ«ã‚¿ãƒªãƒ³ã‚°
		const logContent = this.logBuffer
			.map(info => {
				const transformed = this.logger.format.transform(info, {});
				return transformed && (transformed as TransformableInfo).message && info.level !== 'info' ? (transformed as TransformableInfo).message : '';
			})
			.filter(line => line.length > 0)
			.join('\n');
		try {
			await fs.writeFile(this.logFilePath, logContent + '\n', { flag: 'w' });
			console.error(`\nğŸš¨ ãƒ­ã‚°ã‚’ãƒ•ã‚¡ã‚¤ãƒ«ã«æ›¸ãè¾¼ã¿ã¾ã—ãŸ: ${this.logFilePath}`);
		} catch (e) {
			console.error('ERROR: Failed to write logs to file.', e);
		}
	}
}

const loggerUtil = new LoggerUtil();
const logger = loggerUtil.getLogger();

// =================================================================================================
// ğŸ’» III. KUBERNETES UTILITIES (TARGET_CHAIN_NAME ã®ã¿ã‚’å–å¾—ã™ã‚‹ã‚ˆã†ã«ä¿®æ­£)
// =================================================================================================

const kc = new k8s.KubeConfig();
kc.loadFromDefault();
const k8sApi = kc.makeApiClient(k8s.CoreV1Api);

/**
 * Kubernetesã‹ã‚‰ã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒã‚§ãƒ¼ãƒ³ã®ã‚¨ãƒ³ãƒ‰ãƒã‚¤ãƒ³ãƒˆã‚’å–å¾—ã™ã‚‹
 */
async function getChainResources(): Promise<{ chain: ChainInfo, rpcEndpoint: string, restEndpoint: string }> {
	const chainName = CONFIG.TARGET_CHAIN_NAME;
	const resPods = await k8sApi.listNamespacedPod({
		namespace: CONFIG.K8S_NAMESPACE,
		labelSelector: `app.kubernetes.io/instance=${chainName}`,
	});

	if (resPods.items.length === 0) {
		throw new Error(`Target chain pod ${chainName} not found in Kubernetes.`);
	}

	const chain: ChainInfo = { name: chainName, type: resPods.items[0]!.metadata!.labels!['app.kubernetes.io/component']! as any };

	let rpcEndpoint = '';
	let restEndpoint = '';
	const isLocal = process.env.NODE_ENV !== 'production';

	const resServices = await k8sApi.listNamespacedService({
		namespace: CONFIG.K8S_NAMESPACE,
		labelSelector: `app.kubernetes.io/instance=${chainName}`
	});

	const serviceName = `raidchain-${chain.name}-headless`;
	const service = resServices.items.find(s => s.metadata?.name === serviceName);

	if (isLocal) {
		const rpcPortInfo = service?.spec?.ports?.find(p => p.name === 'rpc');
		const apiPortInfo = service?.spec?.ports?.find(p => p.name === 'api');
		if (rpcPortInfo?.nodePort) { rpcEndpoint = `http://localhost:${rpcPortInfo.nodePort}`; }
		if (apiPortInfo?.nodePort) { restEndpoint = `http://localhost:${apiPortInfo.nodePort}`; }
	} else {
		rpcEndpoint = `http://raidchain-${chain.name}-0.raidchain-chain-headless.${CONFIG.K8S_NAMESPACE}.svc.cluster.local:26657`;
		restEndpoint = `http://raidchain-${chain.name}-0.raidchain-chain-headless.${CONFIG.K8S_NAMESPACE}.svc.cluster.local:1317`;
	}

	if (!rpcEndpoint || !restEndpoint) {
		throw new Error(`Failed to determine endpoints for chain ${chainName}. (Local mode: ${isLocal})`);
	}

	return { chain, rpcEndpoint, restEndpoint };
}

/**
 * Kubernetes Secretã‹ã‚‰ãƒ‹ãƒ¼ãƒ¢ãƒ‹ãƒƒã‚¯ã‚’å–å¾—ã™ã‚‹
 */
async function getCreatorMnemonic(chainName: string): Promise<string> {
	const res = await k8sApi.readNamespacedSecret({
		name: CONFIG.SECRET_NAME,
		namespace: CONFIG.K8S_NAMESPACE,
	});
	const encodedMnemonic = res.data?.[`${chainName}.mnemonic`];
	if (!encodedMnemonic) throw new Error(`Secret does not contain mnemonic for ${chainName}.`);
	return Buffer.from(encodedMnemonic, 'base64').toString('utf-8');
}

// =================================================================================================
// ğŸš€ IV. CHAIN CLIENT & TRANSACTION MANAGEMENT (CLASS-BASED)
// =================================================================================================

/**
 * Cosmos SDKãƒã‚§ãƒ¼ãƒ³ã¨ã®ã‚„ã‚Šå–ã‚Šã‚’ç®¡ç†ã™ã‚‹ã‚¯ãƒ©ã‚¹
 */
class ChainManager {
	private readonly chainClients = new Map<string, ExtendedChainClients>();
	public readonly gasPrice: GasPrice;

	constructor() {
		this.gasPrice = GasPrice.fromString(CONFIG.GAS_PRICE_STRING);
	}

	/**
	 * ã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒã‚§ãƒ¼ãƒ³ã®ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‚’åˆæœŸåŒ–ã™ã‚‹
	 */
	public async initializeClient(chain: ChainInfo, rpcEndpoint: string, restEndpoint: string): Promise<void> {
		try {
			const mnemonic = await getCreatorMnemonic(chain.name);
			const wallet = await DirectSecp256k1HdWallet.fromMnemonic(mnemonic, { hdPaths: [stringToPath(CONFIG.HD_PATH)] });
			const [account] = await wallet.getAccounts();
			if (!account) throw new Error(`Failed to get account from wallet for chain ${chain.name}`);

			const rpcUrl = rpcEndpoint.replace('http', 'ws');
			const wsClient = new WebsocketClient(rpcUrl, (err) => { if (err) { logger.warn(`[${chain.name}] WebSocket connection error: ${err.message}`); } });
			await wsClient.execute({ jsonrpc: "2.0", method: "status", id: 1, params: [] }); // æ¥ç¶šç¢ºèª
			const tmClient = Tendermint37Client.create(wsClient);
			// ğŸ’¡ å¤‰æ›´ç‚¹: createWithSigner ã‚’ä½¿ç”¨ã™ã‚‹ã¨ã€ãƒãƒ³ã‚¹ã®è‡ªå‹•ç®¡ç†ãŒå¯èƒ½
			const client = SigningStargateClient.createWithSigner(tmClient, wallet, { registry: customRegistry, gasPrice: this.gasPrice });

			this.chainClients.set(chain.name, { client, account, tmClient, wsClient, restEndpoint });
			logger.info(`[CLIENT_SETUP] Successful for chain: ${chain.name} (Address: ${account.address})`);
		} catch (e) {
			logger.error(`[CLIENT_SETUP] Failed to initialize client for chain ${chain.name}:`, e);
			throw e;
		}
	}

	public getClientInfo(chainName: string): ExtendedChainClients {
		const clientInfo = this.chainClients.get(chainName);
		if (!clientInfo) throw new Error(`Client not initialized for chain: ${chainName}`);
		return clientInfo;
	}

	/**
	 * ãƒãƒ£ãƒ³ã‚¯ã‚’ãƒ‡ãƒ¼ã‚¿ãƒã‚§ãƒ¼ãƒ³ã«ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ã™ã‚‹ (é€£ç¶šé€ä¿¡)
	 * @returns Tx ã®é…ä¿¡ãƒ¬ã‚¹ãƒãƒ³ã‚¹ (ãƒãƒ³ã‚¹æƒ…å ±ã‚’å«ã‚€)
	 */
	public async uploadChunk(chainName: string, chunkIndex: string, chunkData: Buffer, gasWanted: number): Promise<DeliverTxResponse> {
		const { client, account } = this.getClientInfo(chainName);
		const msg = { typeUrl: '/datachain.datastore.v1.MsgCreateStoredChunk', value: { creator: account.address, index: chunkIndex, data: chunkData }, };

		const fee = calculateFee(gasWanted, this.gasPrice);

		logger.info(`[TX_PREP] Chunk ${chunkIndex} (Size: ${Math.round(chunkData.length / 1024)} KB). Gas Wanted: ${gasWanted}.`);

		// ğŸ’¡ å¤‰æ›´ç‚¹: client.signAndBroadcast ã‚’ä½¿ç”¨ã™ã‚‹ã¨ãƒãƒ³ã‚¹ãŒè‡ªå‹•ã§å‡¦ç†ã•ã‚Œã‚‹
		return await client.signAndBroadcast(account.address, [msg], fee, `Sequential chunk ${chunkIndex}`);
	}

	// queryStoredManifest, queryStoredChunk, uploadManifest ã¯ãƒ†ã‚¹ãƒˆã‹ã‚‰é™¤å¤–ã™ã‚‹ãŸã‚å‰Šé™¤

	// ğŸ’¡ æ–°è¦è¿½åŠ : ãƒãƒ³ã‚¹ã­ã˜è¾¼ã¿æ–¹å¼ã§è¤‡æ•°ã®ç‹¬ç«‹ã—ãŸTxã‚’ãƒ–ãƒ­ãƒ¼ãƒ‰ã‚­ãƒ£ã‚¹ãƒˆã—ã€å®Œäº†ã‚’å¾…ã¤
	/**
	 * è¤‡æ•°ã®ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã‚’ç‹¬ç«‹ã—ãŸãƒˆãƒ©ãƒ³ã‚¶ã‚¯ã‚·ãƒ§ãƒ³ã¨ã—ã¦ãƒãƒ³ã‚¹ã­ã˜è¾¼ã¿æ–¹å¼ã§é€£ç¶šãƒ–ãƒ­ãƒ¼ãƒ‰ã‚­ãƒ£ã‚¹ãƒˆã—ã€
	 * ã™ã¹ã¦ã®TxãŒãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚Œã‚‹ã¾ã§å¾…æ©Ÿã™ã‚‹ã€‚
	 * @param chainName ã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒã‚§ãƒ¼ãƒ³å
	 * @param messages ãƒ–ãƒ­ãƒ¼ãƒ‰ã‚­ãƒ£ã‚¹ãƒˆã™ã‚‹ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã®é…åˆ— (Txã”ã¨)
	 * @param estimatedGas å„Txã«å‰²ã‚Šå½“ã¦ã‚‹ã‚¬ã‚¹ã®è¦‹ç©ã‚‚ã‚Šå€¤
	 * @returns ãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚ŒãŸå…¨ã¦ã®ãƒˆãƒ©ãƒ³ã‚¶ã‚¯ã‚·ãƒ§ãƒ³çµæœ (IndexedTx)
	 */
	public async broadcastSequentialTxs(chainName: string, messages: EncodeObject[], estimatedGas: number): Promise<IndexedTx[]> {
		const { client, account } = this.getClientInfo(chainName);
		const gasWanted = Math.round(estimatedGas * CONFIG.GAS_MULTIPLIER);
		const fee = calculateFee(gasWanted, this.gasPrice);
		const totalTxs = messages.length;

		const accountInfo = await client.getAccount(account.address);
		if (!accountInfo) throw new Error(`Failed to get account info for ${account.address}`);

		let currentSequence = accountInfo.sequence;
		const accountNumber = accountInfo.accountNumber;
		const chainId = await client.getChainId();

		logger.info(`[SEQ_BROADCAST] Starting sequence: ${currentSequence}, Total Txs: ${totalTxs}.`);

		const txHashes: string[] = [];

		// 1. ç½²åã¨åŒæœŸãƒ–ãƒ­ãƒ¼ãƒ‰ã‚­ãƒ£ã‚¹ãƒˆ (ãƒãƒ³ã‚¹ã­ã˜è¾¼ã¿)
		for (let i = 0; i < totalTxs; i++) {
			const msg = messages[i]!;

			// ğŸ’¡ ç½²å: ãƒãƒ³ã‚¹ (sequence) ã‚’æ‰‹å‹•ã§æŒ‡å®šã—ã€ç½²åã™ã‚‹
			const signedTx = await client.sign(
				account.address,
				[msg], // å˜ä¸€ã®ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã‚’Txã¨ã—ã¦ç½²å
				fee,
				`Sequential Tx ${i} (Seq: ${currentSequence})`,
				{
					accountNumber: accountNumber,
					sequence: currentSequence,
					chainId: chainId,
				}
			);

			const txRaw = Uint8Array.from(TxRaw.encode(signedTx).finish());

			// ğŸ’¡ ãƒ–ãƒ­ãƒ¼ãƒ‰ã‚­ãƒ£ã‚¹ãƒˆ: ãƒ–ãƒ­ãƒƒã‚¯ã¸ã®å–ã‚Šè¾¼ã¿ã‚’å¾…ãŸãšã«é€ä¿¡ (ã­ã˜è¾¼ã¿)
			try {
				// broadcastTxSync ã¯ãƒãƒ¼ãƒ‰ãŒ Tx ã‚’å—ã‘å…¥ã‚ŒãŸã‹ã ã‘ã‚’ç¢ºèªã—ã€Txãƒãƒƒã‚·ãƒ¥ã‚’å³åº§ã«è¿”ã™
				const resultHash = await client.broadcastTxSync(txRaw);
				txHashes.push(resultHash);

				logger.info(`[TX_SENT] Tx ${i} sent. Hash: ${resultHash.substring(0, 10)}... (Sequence: ${currentSequence})`);

			} catch (error) {
				logger.error(`[CRITICAL_FAIL] Failed to broadcast Tx ${i}. Error:`, error);
				throw new Error(`Broadcast failure: ${error}`);
			}

			currentSequence++; // æˆåŠŸ/å¤±æ•—ã«é–¢ã‚ã‚‰ãšã€æ‰‹å‹•ã§æ¬¡ã®ãƒãƒ³ã‚¹ã«é€²ã‚ã‚‹
		}

		// 2. å…¨TxãŒãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚Œã‚‹ã®ã‚’å¾…æ©Ÿã—ã€çµæœã‚’ç¢ºèªã™ã‚‹
		const inclusionPromises = txHashes.map(hash =>
			// ğŸ’¡ æ–°ã—ã„ãƒ˜ãƒ«ãƒ‘ãƒ¼é–¢æ•°ã‚’ä½¿ç”¨ã—ã¦ã€TxãŒè¦‹ã¤ã‹ã‚‹ã¾ã§ãƒãƒ¼ãƒªãƒ³ã‚°ã•ã›ã‚‹
			waitForTxInclusion(client, hash)
		);

		// ã™ã¹ã¦ã® Tx ãŒãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚Œã‚‹ã®ã‚’å¾…æ©Ÿ (ä¸¦åˆ—å‡¦ç†)
		const results = await Promise.all(inclusionPromises);

		for (const result of results) {
			if (result.code !== 0) {
				// Tx ãŒãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚ŒãŸãŒã€å®Ÿè¡ŒãŒå¤±æ•—ã—ãŸã‚±ãƒ¼ã‚¹
				logger.error(`[TX_FAILED_DELIVER] Tx with hash ${result.hash.substring(0, 10)}... failed execution. Log: ${result.rawLog}`);
				throw new Error(`Tx execution failed on chain for hash ${result.hash}`);
			}
		}

		logger.info(`[SEQ_BROADCAST] All ${totalTxs} transactions successfully committed to block.`);
		return results;
	}


	/**
	 * WebSocketã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‚’ã™ã¹ã¦åˆ‡æ–­ã™ã‚‹
	 */
	public closeAllConnections(): void {
		for (const { wsClient, tmClient } of this.chainClients.values()) {
			wsClient.disconnect();
			(tmClient as any).disconnect();
		}
	}
}

// =================================================================================================
// âš™ï¸ V. CORE BUSINESS LOGIC (MAIN)
// =================================================================================================

/**
 * Base64ã‚¨ãƒ³ã‚³ãƒ¼ãƒ‰å¾Œã®ã‚µã‚¤ã‚ºã‚’å…ƒã«å…ƒã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚µã‚¤ã‚ºã‚’è¨ˆç®—
 */
function getOriginalSizeForBase64Target(targetSizeInBytes: number): number {
	// 4ãƒã‚¤ãƒˆã®ã‚¨ãƒ³ã‚³ãƒ¼ãƒ‰ãƒ‡ãƒ¼ã‚¿ã‹ã‚‰3ãƒã‚¤ãƒˆã®å…ƒãƒ‡ãƒ¼ã‚¿ãŒå¾—ã‚‰ã‚Œã‚‹ãŸã‚ã€* 3 / 4
	return Math.floor(targetSizeInBytes * 3 / 4);
}

/**
 * ãƒ•ã‚¡ã‚¤ãƒ«ã®æº–å‚™ã¨ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã®åˆæœŸåŒ–
 */
async function setupEnvironment(chainManager: ChainManager): Promise<{
	filePath: string,
	chunkSize: number,
	chainInfo: ChainInfo
}> {
	// 1. å¼•æ•°å‡¦ç†ã¨ãƒ•ã‚¡ã‚¤ãƒ«ä½œæˆ
	const args = process.argv.slice(2);
	const sizeIndex = args.indexOf('--size-kb');
	const targetSizeKB = (sizeIndex !== -1 && args[sizeIndex + 1]) ? parseInt(args[sizeIndex + 1]!, 10) : CONFIG.DEFAULT_TEST_SIZE_KB;

	if (isNaN(targetSizeKB) || targetSizeKB <= 0) {
		throw new Error(`Invalid --size-kb argument: ${targetSizeKB}. Must be a positive integer.`);
	}

	const filePath = `src/tests/temp-file-${targetSizeKB}kb`;
	const originalSizeKB = Math.floor(getOriginalSizeForBase64Target(targetSizeKB * 1024) / 1024);
	const fileSizeInBytes = originalSizeKB * 1024;
	const originalContent = `This is a test file for sequential upload.`;
	// ğŸ’¡ ä¿®æ­£: Buffer.allocã§ãƒ•ã‚¡ã‚¤ãƒ«ã‚µã‚¤ã‚ºã‚’ç¢ºä¿
	await fs.writeFile(filePath, Buffer.alloc(fileSizeInBytes, originalContent));
	logger.info(`[GLOBAL_INFO] Created temp file: ${filePath} (${fileSizeInBytes / 1024} KB)`);

	// 2. ç’°å¢ƒæƒ…å ±ã®å–å¾—
	const { chain: chainInfo, rpcEndpoint, restEndpoint } = await getChainResources();
	const chunkSize = CONFIG.DEFAULT_CHUNK_SIZE;
	logger.info(`[GLOBAL_INFO] Chunk Size: ${Math.round(chunkSize / 1024)} KB`);

	// 3. ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã®åˆæœŸåŒ–
	await chainManager.initializeClient(chainInfo, rpcEndpoint, restEndpoint);

	return { filePath, chunkSize, chainInfo };
}

/**
 * ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ãƒãƒ£ãƒ³ã‚¯ã«åˆ†å‰²ã—ã€ã‚¸ãƒ§ãƒ–ã¨ã—ã¦æº–å‚™ã™ã‚‹
 */
async function createUploadJobs(filePath: string, chunkSize: number): Promise<UploadJob[]> {
	const jobQueue: UploadJob[] = [];
	let chunkCounter = 0;
	const uniqueSuffix = `seq-test-${Date.now()}`;

	const fileStream = createReadStream(filePath, { highWaterMark: chunkSize });
	for await (const chunk of fileStream) {
		const chunkIndex = `${uniqueSuffix}-${chunkCounter}`;
		const job: UploadJob = { chunk: chunk as Buffer, index: chunkIndex, retries: 0 };
		jobQueue.push(job);
		chunkCounter++;
	}

	logger.info(`[ALLOCATION] File split into ${chunkCounter} sequential chunks.`);
	return jobQueue;
}

// ğŸ’¡ ä¿®æ­£ 1: TxãŒãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚Œã‚‹ã®ã‚’å¾…ã¤é–¢æ•°
async function waitForTxInclusion(client: SigningStargateClient, hash: string): Promise<IndexedTx> {
	const MAX_POLLING_ATTEMPTS = 40;
	const POLLING_INTERVAL_MS = 2000; // 2ç§’é–“éš”

	for (let i = 0; i < MAX_POLLING_ATTEMPTS; i++) {
		// getTx ã¯ DeliverTxResponse | null ã‚’è¿”ã™
		const result = await client.getTx(hash);

		if (result) {
			// TxãŒãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚ŒãŸã“ã¨ã‚’ç¢ºèª
			// æ³¨æ„: ã“ã®é–¢æ•°ã¯ Tx ãŒè¦‹ã¤ã‹ã£ãŸã“ã¨ã ã‘ã‚’ä¿è¨¼ã—ã€å®Ÿè¡Œçµæœ (code=0) ã®ãƒã‚§ãƒƒã‚¯ã¯å‘¼ã³å‡ºã—å…ƒã§è¡Œã†ã“ã¨ãŒå¤šã„
			// ãŸã ã—ã€ã“ã®ã‚¹ã‚¯ãƒªãƒ—ãƒˆã§ã¯ã€å®Ÿè¡Œå¤±æ•—ã‚’æ—©æœŸã«æ¤œå‡ºã™ã‚‹ãŸã‚ã€ã“ã“ã§ code=0 ã®ãƒã‚§ãƒƒã‚¯ã‚’è¡Œã†
			if (result.code !== 0) {
				// å®Ÿè¡Œã¯å¤±æ•—ã—ãŸãŒã€ãƒ–ãƒ­ãƒƒã‚¯ã«ã¯å«ã¾ã‚Œã¦ã„ã‚‹
				throw new Error(`Tx execution failed (Code: ${result.code}, Log: ${result.rawLog})`);
			}
			return result;
		}

		// ãƒ–ãƒ­ãƒƒã‚¯ã«å–ã‚Šè¾¼ã¾ã‚Œã‚‹ã®ã‚’å¾…ã¤ãŸã‚ã«å¾…æ©Ÿ
		await new Promise(resolve => setTimeout(resolve, POLLING_INTERVAL_MS));
	}

	throw new Error(`Transaction ${hash} was not included in a block after ${MAX_POLLING_ATTEMPTS} attempts.`);
}

/**
 * ãƒãƒ£ãƒ³ã‚¯ã‚’é€£ç¶šã§ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰ã™ã‚‹
 */
async function executeSequentialUpload(chainManager: ChainManager, jobQueue: UploadJob[], estimatedGas: number): Promise<void> {
	const chainName = CONFIG.TARGET_CHAIN_NAME;
	const { account } = chainManager.getClientInfo(chainName);
	const totalChunks = jobQueue.length;

	// ãƒãƒ£ãƒ³ã‚¯ã‚¸ãƒ§ãƒ–ã‹ã‚‰ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã®é…åˆ—ã‚’ä½œæˆ
	const messages: EncodeObject[] = jobQueue.map(job => ({
		typeUrl: '/datachain.datastore.v1.MsgCreateStoredChunk',
		value: { creator: account.address, index: job.index, data: job.chunk },
	}));

	const singleBar = new cliProgress.SingleBar({
		clearOnComplete: false,
		hideCursor: true,
		format: '{chain} | {bar} | {percentage}% ({value}/{total}) | {eta}s ETA | Status: {status}',
	}, cliProgress.Presets.shades_grey);

	singleBar.start(totalChunks, 0, { chain: chainName, status: 'Signing & Broadcasting' });

	// ğŸ’¡ å¤‰æ›´ç‚¹: æ–°ã—ãä½œæˆã—ãŸ broadcastSequentialTxs ã‚’å‘¼ã³å‡ºã™
	try {
		const results = await chainManager.broadcastSequentialTxs(chainName, messages, estimatedGas);
		singleBar.update(totalChunks, { status: `Confirmed up to block ${results[results.length - 1]?.height}` });
	} catch (e) {
		singleBar.update(totalChunks, { status: 'FAILED' });
		throw e;
	} finally {
		singleBar.stop();
	}

	logger.info('[MAIN] All sequential chunks successfully uploaded and confirmed.');
}

/**
 * ãƒ¡ã‚¤ãƒ³ã®é€£ç¶šã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰å‡¦ç†
 */
async function main() {
	const chainManager = new ChainManager();
	let filePath: string | null = null;
	let totalChunks: number = 0;
	const startTime = Date.now();

	try {
		// 1. ç’°å¢ƒè¨­å®šã€ãƒ•ã‚¡ã‚¤ãƒ«ä½œæˆã€ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆåˆæœŸåŒ–
		const { filePath: fp, chunkSize, chainInfo } = await setupEnvironment(chainManager);
		filePath = fp;

		// 2. ãƒãƒ£ãƒ³ã‚¯åˆ†å‰²ã¨ã‚¸ãƒ§ãƒ–ã®æº–å‚™
		const jobQueue = await createUploadJobs(filePath, chunkSize);
		totalChunks = jobQueue.length;

		// 3. ã‚¬ã‚¹ä»£ã®ã‚·ãƒŸãƒ¥ãƒ¬ãƒ¼ã‚·ãƒ§ãƒ³ï¼ˆæœ€åˆã®ãƒãƒ£ãƒ³ã‚¯ã‚’ä½¿ç”¨ï¼‰
		const firstChunkJob = jobQueue[0];
		if (!firstChunkJob) { throw new Error('No chunks generated for upload.'); }
		const dataChainClient = chainManager.getClientInfo(chainInfo.name);
		const dummyMsg = { typeUrl: '/datachain.datastore.v1.MsgCreateStoredChunk', value: { creator: dataChainClient.account.address, index: firstChunkJob.index, data: firstChunkJob.chunk }, };
		// ğŸ’¡ æ³¨æ„: ã‚·ãƒŸãƒ¥ãƒ¬ãƒ¼ã‚·ãƒ§ãƒ³ã¯ Base64 ã‚¨ãƒ³ã‚³ãƒ¼ãƒ‰å‰ã®ã‚µã‚¤ã‚ºã§è¡Œã‚ã‚Œã‚‹
		const estimatedGas = await dataChainClient.client.simulate(dataChainClient.account.address, [dummyMsg], 'Gas Estimation');
		logger.info(`[GAS_SIMULATE] Initial estimated gas for one chunk: ${estimatedGas}. Gas Wanted: ${Math.round(estimatedGas * CONFIG.GAS_MULTIPLIER)}.`);

		// 4. ãƒãƒ£ãƒ³ã‚¯ã‚¢ãƒƒãƒ—ãƒ­ãƒ¼ãƒ‰å®Ÿè¡Œ (é€£ç¶šé€ä¿¡)
		logger.info('[MAIN] Starting sequential chunk uploads to single chain...');
		// ğŸ’¡ å¤‰æ›´ç‚¹: executeSequentialUpload ã®å†…éƒ¨ã§æ–°é–¢æ•°ãŒä½¿ã‚ã‚Œã‚‹ã‚ˆã†ã«ãªã£ãŸãŸã‚ã€ã“ã®é–¢æ•°ã¯ã‚·ãƒ³ãƒ—ãƒ«ã«å‘¼ã³å‡ºã™ã ã‘
		await executeSequentialUpload(chainManager, jobQueue, estimatedGas);

		// 5. ã‚¯ãƒªãƒ¼ãƒ³ã‚¢ãƒƒãƒ—
		await fs.unlink(filePath);
		logger.info(`[CLEANUP] Temporary file ${filePath} deleted.`);
		chainManager.closeAllConnections();

	} catch (err) {
		logger.error('[MAIN] A fatal error occurred:', err);
		throw err;
	} finally {
		// ãƒ‘ãƒ•ã‚©ãƒ¼ãƒãƒ³ã‚¹è¨ˆæ¸¬
		const endTime = Date.now();
		const totalUploadTimeMs = endTime - startTime;
		const totalUploadTimeSec = (totalUploadTimeMs / 1000).toFixed(2);
		const averageTimePerChunkMs = (totalChunks > 0 ? (totalUploadTimeMs / totalChunks) : 0).toFixed(2);
		console.log('\n--- ğŸ“Š Sequential Upload Performance ---');
		console.log(`Total Chunks: ${totalChunks}`);
		console.log(`Total Upload Time: ${totalUploadTimeSec} seconds`);
		console.log(`Average Time per Chunk: ${averageTimePerChunkMs} ms`);
		console.log('--------------------------\n');
	}
}

// å®Ÿè¡Œã¨æœ€çµ‚çš„ãªã‚¨ãƒ©ãƒ¼ãƒãƒ³ãƒ‰ãƒªãƒ³ã‚°
main().then(async () => {
	logger.info('[MAIN] Script finished successfully.');
	await loggerUtil.flushLogs();
	process.exit(0);
}).catch(async err => {
	logger.error('Uncaught fatal error in main execution loop:', err);
	await loggerUtil.flushLogs();
	process.exit(1);
});